//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Organization {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  eventLogs EventLog [not null]
  files File [not null]
  permissions Permission [not null]
  permissionGroups PermissionGroup [not null]
  projects Project [not null]
  resources Resource [not null]
  settings Settings [not null]
  tasks Task [not null]
  taskBoards TaskBoard [not null]
  teams Team [not null]
  users User [not null]
}

Table Resource {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  code String [not null]
  icon String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  organizationId Int [not null]
  organization Organization [not null]
  resourceItems ResourceItem [not null]
}

Table ResourceItem {
  id Int [pk, increment]
  name String [not null]
  code String [not null]
  description String [not null]
  icon String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  resourceId Int [not null]
  resource Resource [not null]
}

Table File {
  id Int [pk, increment]
  filename String [not null]
  fileType FileType [not null]
  mimetype String [not null]
  encoding String [not null]
  data String [not null]
  cdnUrl String [not null]
  varantName String
  variantKey String
  variantValue String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  variantOfId Int
  organizationId Int [not null]
  organization Organization [not null]
  variantOf File
  variants File [not null]
  avatarUsers User [not null]
}

Table Settings {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  key String [not null]
  organizationId Int [not null]
  value Json [not null, default: '{}']
  organization Organization [not null]
}

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  email String [unique, not null]
  password String
  firstname String
  lastname String
  organizationId Int
  role Role [not null]
  avatarId Int
  googleId String
  googleToken String
  provider ProviderEnum [not null, default: 'local']
  fullName String
  branchCode String
  jobPositionCode String
  userTypeName String
  statusName String
  comments Comment [not null]
  taskEvents EventLog [not null]
  memberOnProjects MemberOnProjects [not null]
  memberOnTeams MemberOnTeams [not null]
  posts Post [not null]
  createdProjects Project [not null]
  managedProjects Project [not null]
  repotedProjects Project [not null]
  assignedTasks Task [not null]
  createdTasks Task [not null]
  reportedTasks Task [not null]
  createdteams Team [not null]
  managedteams Team [not null]
  avatar File
  organization Organization
  userPermissions UserPermission [not null]
  userSettings UserSetting [not null]
}

Table UserSetting {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  key String [not null]
  value Json [not null, default: '{}']
  userId Int [not null]
  user User [not null]
}

Table Form {
  id Int [pk, increment]
  name String [not null]
  code String [not null]
  description String [not null]
  schema Json [not null]
  config Json [not null]
  validationConfig Json [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  values Json
  tasks Task [not null]
}

Table Permission {
  id Int [pk, increment]
  name String [not null]
  code String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  organizationId Int [not null]
  permissionGroupId Int [not null]
  organization Organization [not null]
  permissionGroup PermissionGroup [not null]
  userPermissions UserPermission [not null]
}

Table PermissionGroup {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  organizationId Int [not null]
  permissions Permission [not null]
  organization Organization [not null]
}

Table UserPermission {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  userId Int [not null]
  permissionId Int [not null]
  permission Permission [not null]
  user User [not null]
}

Table Post {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  published Boolean [not null]
  title String [not null]
  content String
  authorId Int
  author User
}

Table Project {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  description String [not null]
  code String [not null]
  icon String [not null]
  organizationId Int [not null]
  taskDefinitionId Int [not null]
  creatorId Int [not null]
  managerId Int [not null]
  reporterId Int [not null]
  members MemberOnProjects [not null]
  creator User [not null]
  manager User [not null]
  organization Organization [not null]
  reporter User [not null]
  taskDefinition TaskDefinition [not null]
  settings ProjectSettings [not null]
  tasks Task [not null]
  taskBoards TaskBoard [not null]
}

Table TaskBoard {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  description String [not null]
  code String [not null]
  icon String [not null]
  type TaskBoardType [not null, default: 'Organization']
  viewType TaskBoardViewType [not null, default: 'Todos']
  viewConfig Json [not null, default: '{}']
  visibility Visibility [not null, default: 'Public']
  organizationId Int [not null]
  projectId Int
  taskDefinitionId Int [not null]
  organization Organization [not null]
  project Project
  taskDefinition TaskDefinition [not null]
  settings TaskBoardSettings [not null]
}

Table TaskBoardSettings {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  key String [not null]
  value Json [not null, default: '{}']
  taskBoardId Int [not null]
  taskBoard TaskBoard [not null]
}

Table MemberOnProjects {
  projectId Int [not null]
  userId Int [not null]
  assignedAt DateTime [default: `now()`, not null]
  assignedBy String [not null]
  project Project [not null]
  user User [not null]

  indexes {
    (projectId, userId) [pk]
  }
}

Table ProjectSettings {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  key String [not null]
  value Json [not null, default: '{}']
  projectId Int [not null]
  project Project [not null]
}

Table Team {
  id Int [pk, increment]
  name String [not null]
  bio String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  creatorId Int [not null]
  managerId Int [not null]
  organizationId Int [not null]
  memberOnTeams MemberOnTeams [not null]
  tasks Task [not null]
  creator User [not null]
  manager User [not null]
  organization Organization [not null]
}

Table MemberOnTeams {
  teamId Int [not null]
  userId Int [not null]
  assignedAt DateTime [default: `now()`, not null]
  assignedBy String [not null]
  team Team [not null]
  user User [not null]

  indexes {
    (teamId, userId) [pk]
  }
}

Table TaskDefinition {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  title String [not null]
  description String [not null]
  icon String [not null]
  thumbnail String [not null]
  descriptionTemplate String
  titleTemplate String
  statusTemplate String
  stateTemplate String
  notificationTemplate String
  ctaTemplate String
  organizationId Int [not null]
  parentId Int
  keyTemplate String
  machineConfig Json
  projects Project [not null]
  taskInstances Task [not null]
  taskBoards TaskBoard [not null]
  parentTaskDefinition TaskDefinition
  subTaskDefinitions TaskDefinition [not null]
}

Table Task {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  dueDate DateTime
  priority TaskPriority [not null, default: 'LOW']
  values Json
  ctaName String [not null, default: '']
  stateName String [not null, default: '']
  statusName String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  definitionId Int
  assigneeId Int
  creatorId Int [not null]
  parentId Int
  organizationId Int
  teamId Int
  config Json
  cta String [not null, default: '']
  ctaTemplate String
  descriptionTemplate String
  notificationTemplate String
  properties Json
  state String [not null, default: '']
  stateTemplate String
  stateValues String [not null, default: '']
  statusTemplate String
  titleTemplate String
  type String [not null, default: '']
  typeName String [not null, default: '']
  status String [not null, default: '']
  formConfig Json
  key String [not null]
  isActive Boolean [not null, default: false]
  formId Int
  projectId Int
  reporterId Int
  comments Comment [not null]
  eventLogs EventLog [not null]
  assignee User
  creator User [not null]
  definition TaskDefinition
  form Form
  organization Organization
  parentTask Task
  subTasks Task [not null]
  project Project
  reporter User
  team Team
  Trigger Trigger [not null]
}

Table Comment {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  content String [not null]
  creatorId Int [not null]
  taskId Int [not null]
  creator User [not null]
  task Task [not null]
}

Table EventLog {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`]
  userId Int
  taskId Int
  organizationId Int
  content String
  context Json
  action String
  domain String
  intent String
  organization Organization
  task Task
  user User
}

Table Trigger {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  type TriggerType [not null]
  name String
  description String
  key String [not null]
  status TriggerStatus [not null]
  taskId Int
  value Json
  task Task
}

Table ActivityDefinition {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  synchronous Boolean [not null, default: false]
  type ActivityType [not null]
  config Json
  initialValue Json
  key String [unique, not null]
  name String
  description String
}

Enum FileType {
  FILE
  VARIANT
}

Enum ProviderEnum {
  local
  google
}

Enum TaskBoardViewType {
  Todos
  Kanban
  Calendar
  Matrix
}

Enum TaskBoardType {
  Organization
  Personal
  Project
  Team
}

Enum Visibility {
  Public
  Private
}

Enum Role {
  ADMIN
  USER
}

Enum TaskPriority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

Enum TriggerType {
  FORM_TRIGGER
  SYSTEM_TRIGGER
  MANUAL_TRIGGER
  WEBHOOK_TRIGGER
}

Enum TriggerStatus {
  NEW
  PROCESSING
  PROCESSED
  FAILED
}

Enum ActivityType {
  HTTP_ACTIVITY
  GRAPHQL_ACTIVITY
  SCRIPT_ACTIVITY
  SYSTEM_ACTIVITY
}

Ref: Resource.organizationId > Organization.id

Ref: ResourceItem.resourceId > Resource.id

Ref: File.organizationId > Organization.id

Ref: File.variantOfId - File.id

Ref: Settings.organizationId > Organization.id

Ref: User.avatarId > File.id

Ref: User.organizationId > Organization.id [delete: Restrict]

Ref: UserSetting.userId > User.id

Ref: Permission.organizationId > Organization.id

Ref: Permission.permissionGroupId > PermissionGroup.id

Ref: PermissionGroup.organizationId > Organization.id

Ref: UserPermission.permissionId > Permission.id

Ref: UserPermission.userId > User.id

Ref: Post.authorId > User.id

Ref: Project.creatorId > User.id

Ref: Project.managerId > User.id

Ref: Project.organizationId > Organization.id

Ref: Project.reporterId > User.id

Ref: Project.taskDefinitionId > TaskDefinition.id

Ref: TaskBoard.organizationId > Organization.id

Ref: TaskBoard.projectId > Project.id

Ref: TaskBoard.taskDefinitionId > TaskDefinition.id

Ref: TaskBoardSettings.taskBoardId > TaskBoard.id

Ref: MemberOnProjects.projectId > Project.id

Ref: MemberOnProjects.userId > User.id

Ref: ProjectSettings.projectId > Project.id

Ref: Team.creatorId > User.id

Ref: Team.managerId > User.id

Ref: Team.organizationId > Organization.id

Ref: MemberOnTeams.teamId > Team.id

Ref: MemberOnTeams.userId > User.id

Ref: TaskDefinition.parentId - TaskDefinition.id

Ref: Task.assigneeId > User.id

Ref: Task.creatorId > User.id

Ref: Task.definitionId > TaskDefinition.id

Ref: Task.formId > Form.id

Ref: Task.organizationId > Organization.id [delete: Restrict]

Ref: Task.parentId - Task.id

Ref: Task.projectId > Project.id

Ref: Task.reporterId > User.id

Ref: Task.teamId > Team.id

Ref: Comment.creatorId > User.id

Ref: Comment.taskId > Task.id

Ref: EventLog.organizationId > Organization.id [delete: Restrict]

Ref: EventLog.taskId > Task.id

Ref: EventLog.userId > User.id

Ref: Trigger.taskId > Task.id